--- a/TableHeadingTest.html
+++ b/TableHeadingTest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tables</title>
+	<title>Fake Grades</title>
 </head> 
 <body>
 	<table border="1">
